--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,68 @@
+aiofiles==24.1.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.7.0
+appdirs==1.4.4
+appnope==0.1.4
+asttokens==3.0.0
 attrs==24.3.0
+backoff==2.2.1
 beautifulsoup4==4.12.3
 certifi==2024.12.14
+cffi==1.17.1
+chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
+comm==0.2.2
+cryptography==44.0.0
 dataclasses-json==0.6.7
+datasets==3.2.0
+debugpy==1.8.11
+decorator==5.1.1
 Deprecated==1.2.15
+dill==0.3.8
 dirtyjson==1.0.8
 distro==1.9.0
+emoji==2.14.0
+eval_type_backport==0.2.2
+executing==2.1.0
 filelock==3.16.1
 filetype==1.2.0
 frozenlist==1.5.0
-fsspec==2024.12.0
+fsspec==2024.9.0
 greenlet==3.1.1
 grpcio==1.68.1
 grpcio-tools==1.68.1
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
+html5lib==1.1
 httpcore==1.0.7
 httpx==0.28.1
+httpx-sse==0.4.0
 huggingface-hub==0.27.0
 hyperframe==6.0.1
 idna==3.10
+ipykernel==6.29.5
+ipython==8.31.0
+jedi==0.19.2
 Jinja2==3.1.5
 jiter==0.8.2
 joblib==1.4.2
+jsonpatch==1.33
+jsonpath-python==1.0.6
+jsonpointer==3.0.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+langchain==0.3.13
+langchain-community==0.3.13
+langchain-core==0.3.28
+langchain-openai==0.2.14
+langchain-text-splitters==0.3.4
+langdetect==1.0.9
+langsmith==0.2.7
 llama-cloud==0.1.7
 llama-index==0.12.9
 llama-index-agent-openai==0.4.1
@@ -46,31 +79,57 @@ llama-index-readers-file==0.4.1
 llama-index-readers-llama-parse==0.4.0
 llama-index-vector-stores-qdrant==0.4.2
 llama-parse==0.5.19
+lxml==5.3.0
 MarkupSafe==3.0.2
 marshmallow==3.23.2
+matplotlib-inline==0.1.7
 mpmath==1.3.0
 multidict==6.1.0
+multiprocess==0.70.16
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.1
-numpy==2.2.1
+numpy==1.26.4
+olefile==0.47
 openai==1.58.1
+orjson==3.10.13
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.0.0
+platformdirs==4.3.6
 portalocker==2.10.1
+prompt_toolkit==3.0.48
 propcache==0.2.1
 protobuf==5.29.2
-pydantic==2.10.4
-pydantic_core==2.27.2
+psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==18.1.0
+pycparser==2.22
+pydantic==2.9.2
+pydantic-settings==2.7.1
+pydantic_core==2.23.4
+Pygments==2.18.0
 pypdf==5.1.0
+pysbd==0.3.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-iso639==2024.10.22
+python-magic==0.4.27
+python-magic-bin==0.4.14
+python-oxmsg==0.0.1
 pytz==2024.2
 PyYAML==6.0.2
+pyzmq==26.2.0
 qdrant-client==1.12.2
+ragas==0.1.7
+RapidFuzz==3.11.0
 regex==2024.11.6
 requests==2.32.3
+requests-toolbelt==1.0.0
 safetensors==0.4.5
 scikit-learn==1.6.0
 scipy==1.14.1
@@ -80,6 +139,7 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.36
+stack-data==0.6.3
 striprtf==0.0.26
 sympy==1.13.3
 tenacity==9.0.0
@@ -87,11 +147,18 @@ threadpoolctl==3.5.0
 tiktoken==0.8.0
 tokenizers==0.21.0
 torch==2.2.2
+tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
 transformers==4.47.1
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
+unstructured==0.16.11
+unstructured-client==0.28.1
 urllib3==2.3.0
+wcwidth==0.2.13
+webencodings==0.5.1
 wrapt==1.17.0
+xxhash==3.5.0
 yarl==1.18.3
