--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ Deprecated==1.2.15
 dill==0.3.8
 dirtyjson==1.0.8
 distro==1.9.0
+einops==0.8.0
 emoji==2.14.0
 eval_type_backport==0.2.2
 executing==2.1.0
@@ -92,7 +93,7 @@ networkx==3.4.2
 nltk==3.9.1
 numpy==1.26.4
 olefile==0.47
-openai==1.58.1
+openai==1.59.2
 orjson==3.10.13
 packaging==24.2
 pandas==2.2.3
