--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,11 @@ cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
+coloredlogs==15.0.1
 comm==0.2.2
+contourpy==1.3.1
 cryptography==44.0.0
+cycler==0.12.1
 dataclasses-json==0.6.7
 datasets==3.2.0
 debugpy==1.8.11
@@ -29,8 +32,11 @@ einops==0.8.0
 emoji==2.14.0
 eval_type_backport==0.2.2
 executing==2.1.0
+fastembed==0.5.1
 filelock==3.16.1
 filetype==1.2.0
+flatbuffers==25.1.24
+fonttools==4.56.0
 frozenlist==1.5.0
 fsspec==2024.9.0
 greenlet==3.1.1
@@ -44,6 +50,7 @@ httpcore==1.0.7
 httpx==0.28.1
 httpx-sse==0.4.0
 huggingface-hub==0.27.0
+humanfriendly==10.0
 hyperframe==6.0.1
 idna==3.10
 ipykernel==6.29.5
@@ -57,21 +64,26 @@ jsonpath-python==1.0.6
 jsonpointer==3.0.0
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+kiwisolver==1.4.8
 langchain==0.3.13
 langchain-community==0.3.13
-langchain-core==0.3.28
+langchain-core==0.3.34
+langchain-ollama==0.2.3
 langchain-openai==0.2.14
 langchain-text-splitters==0.3.4
 langdetect==1.0.9
 langsmith==0.2.7
+libmagic==1.0
 llama-cloud==0.1.7
 llama-index==0.12.9
 llama-index-agent-openai==0.4.1
 llama-index-cli==0.4.0
 llama-index-core==0.12.9
+llama-index-embeddings-fastembed==0.3.0
 llama-index-embeddings-huggingface==0.4.0
 llama-index-embeddings-openai==0.3.1
 llama-index-indices-managed-llama-cloud==0.6.3
+llama-index-llms-ollama==0.5.0
 llama-index-llms-openai==0.3.12
 llama-index-multi-modal-llms-openai==0.4.1
 llama-index-program-openai==0.3.1
@@ -80,10 +92,13 @@ llama-index-readers-file==0.4.1
 llama-index-readers-llama-parse==0.4.0
 llama-index-vector-stores-qdrant==0.4.2
 llama-parse==0.5.19
+loguru==0.7.3
 lxml==5.3.0
 MarkupSafe==3.0.2
 marshmallow==3.23.2
+matplotlib==3.10.0
 matplotlib-inline==0.1.7
+mmh3==4.1.0
 mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.16
@@ -93,13 +108,16 @@ networkx==3.4.2
 nltk==3.9.1
 numpy==1.26.4
 olefile==0.47
+ollama==0.4.7
+onnxruntime==1.20.1
 openai==1.59.2
 orjson==3.10.13
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
+pdfminer.six==20240706
 pexpect==4.9.0
-pillow==11.0.0
+pillow==10.4.0
 platformdirs==4.3.6
 portalocker==2.10.1
 prompt_toolkit==3.0.48
@@ -108,12 +126,15 @@ protobuf==5.29.2
 psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
+py_rust_stemmers==0.1.3
 pyarrow==18.1.0
 pycparser==2.22
+pycryptodome==3.21.0
 pydantic==2.9.2
 pydantic-settings==2.7.1
 pydantic_core==2.23.4
 Pygments==2.18.0
+pyparsing==3.2.1
 pypdf==5.1.0
 pysbd==0.3.4
 python-dateutil==2.9.0.post0
@@ -135,7 +156,6 @@ safetensors==0.4.5
 scikit-learn==1.6.0
 scipy==1.14.1
 sentence-transformers==3.3.1
-setuptools==75.6.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
@@ -148,6 +168,7 @@ threadpoolctl==3.5.0
 tiktoken==0.8.0
 tokenizers==0.21.0
 torch==2.2.2
+torchvision==0.17.2
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
